--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,24 @@
 {
   "version": 2,
   "framework": "vite",
-  "buildCommand": "npm run build:vercel",
+  "buildCommand": "npm run buildvercel",
   "outputDirectory": "dist/public",
-  "rewrites": [
-    { "source": "/api/(.*)", "destination": "/api" },
-    { "source": "/(.*)", "destination": "/index.html" }
+
+  "routes": [
+    {
+      "src": "^/(login|packages|active|orders|drivers)(/.*)?$",
+      "dest": "/api/$1$2"
+    },
+    {
+      "src": "^/api/(.*)$",
+      "dest": "/api/[...path].ts"
+    },
+    {
+      "handle": "filesystem"
+    },
+    {
+      "src": "^/(.*)$",
+      "dest": "/index.html"
+    }
   ]
 }
